@@ -1,5 +1,6 @@
 
 5.2a2 -> 5.2a3:
+    - rpm.org: repeated read config -> free config needs globalLuaState == NULL.
     - rpm.org: Fix buffer overflow on oversized filelist entries(susebz#397006).
     - jbj: rpmdigest: avoid segfault on named pipes and other uglix fauna.
     - jbj: pcre: finalize --with-pcre=internal building.
